--- a/manifest.json
+++ b/manifest.json
@@ -4,16 +4,19 @@
 	"manifest_version": 2,
 	"description": "Removes various types of posts from youtube",
 	"icons": {
-		"32": "icons/clock32.png",
-		"64": "icons/clock64.png",
-		"128": "icons/clock128.png"
+		"32":  "icons/icon32.png",
+		"64":  "icons/icon64.png",
+		"128": "icons/icon128.png"
 		},
 	"permissions": [
 		"activeTab", 
 		"tabs",
+		"storage",
 		"*://www.youtube.com/feed/subscriptions"
 	],
 	"background": {
-		"scripts": ["background.js"]
-	}
+		"scripts": ["scripts/background.js"],
+		"persistent": false
+	},
+	"options_page": "html/options.html"
 }
